src/test/deca/context/valid/created/sans_objet/decl_int_rule.deca
// Règles attendues (occurences dans lignes du fichier résultat):
// Program 24:0
//     ListDeclClass
//     Main 24:0
//         ListDeclVar
//             DeclVar 25:8
//                 Identifier 25:4
//                 int 
//                 Identifier 25:8
//                 int 25:8
//                 Initialization 25:12
//                     Int 25:12
//                     int
//         ListInst
//
// Auteur: Carmel
//
// Historique:
//    cree le 14/01/2024
//
// Description:
//    test de programme syntaxiquement correct.

{
    int i = 1;
}