src/test/deca/context/invalid/created/rule1.3/already_declared.deca
// Résultat erreur:
//    16:8
//    nom d'attribut déjà déclaré (règle 2.4)
//
// Description:
//    tests de programme incorrect contextuellement (identificateur deja déclaré)
//
// Auteur:
//    Jerome
//
// Historique:
//    cree le 13/01/2024

{
    int i ;
    int i ;
}